# OTUS_CPP_Professional_HomeWork_01_cmake

./: .gitignore  CMakeLists.txt  README.md  lib.cpp  lib.h  main.cpp  test_version_gtest.cpp
.github/workflows/: release.yml
